--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -1,21 +1,29 @@
 .navbar {
-  display: flex;
-  justify-content: space-between;
   align-items: center;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  margin: 0 auto;
+  max-width: 81.25rem;
+  width: 85%;
+  font-size: 1.5rem;
 }
 
 .navbar_list {
+  list-style: none;
   display: flex;
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  justify-content: space-evenly;
+  width: 50%;
+  justify-content: space-around;
 }
 
 .navbar_item {
-  margin-right: 10px;
+  margin-left: 2rem;
 }
 
 .navbar_item:last-child {
   margin-right: 0;
+}
+
+.navbar_logo {
+  flex: 0 0 auto;
 }
