--- a/app/components/Title/Title.module.css
+++ b/app/components/Title/Title.module.css
@@ -6,10 +6,6 @@
 .title__text {
   font-size: 2rem;
   font-weight: 700;
-}
-
-@media screen and (min-width: 945px) {
-  .title__text {
-    margin-left: 1rem;
-  }
+  color: white;
+  font-family: "Roboto", sans-serif;
 }
