added minimal styles to links and font

--- a/app/components/NavBar/NavBar.module.css
+++ b/app/components/NavBar/NavBar.module.css
@@ -27,3 +27,9 @@
 .navbar_logo {
   flex: 0 0 auto;
 }
+
+.links {
+  color: black;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+}
