--- a/app/components/Logo/Logo.module.css
+++ b/app/components/Logo/Logo.module.css
@@ -7,6 +7,6 @@
 .logo {
   font-size: 3rem;
   font-weight: 700;
-  color: black;
+  color: rgb(248, 245, 245);
   font-family: "Roboto", sans-serif;
 }
