--- a/app/page.module.css
+++ b/app/page.module.css
@@ -12,3 +12,11 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
+.about__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  min-height: 100vh;
+}
