--- a/app/components/Form/Form.module.css
+++ b/app/components/Form/Form.module.css
@@ -5,7 +5,7 @@
   flex-direction: column;
   justify-content: center;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 1rem;
   text-align: center;
   width: 100%;
 }
@@ -17,6 +17,7 @@
 
 .input {
   border-radius: 0.3rem;
+  width: 100%;
 }
 
 .button_label {
