--- a/app/components/Sections/AboutSection/AboutSection.module.css
+++ b/app/components/Sections/AboutSection/AboutSection.module.css
@@ -6,6 +6,11 @@
   align-items: center;
 }
 
+.image {
+  filter: grayscale(100%);
+  border-radius: 0.5rem;
+}
+
 /* .about_text {
   color: white;
   font-size: 1.5rem;
