--- a/app/components/Sections/SignUpSection/SignUpSection.module.css
+++ b/app/components/Sections/SignUpSection/SignUpSection.module.css
@@ -1,3 +1,9 @@
 .sign_up_section__wrapper {
   background-color: black;
 }
+
+.overlay {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
