--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  /* align-items: center;
+  max-width: fit-content; */
   min-height: 100vh;
 }
 
