--- a/app/components/ImageOverlay/ImageOverlay.module.css
+++ b/app/components/ImageOverlay/ImageOverlay.module.css
@@ -1,7 +1,7 @@
 .container {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: hidden;
 }
 
@@ -17,4 +17,14 @@
   align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
+}
+
+.intro__image {
+  object-fit: "cover";
+  filter: grayscale(100%);
+}
+
+.form__image {
+  object-fit: "cover";
+  filter: grayscale(100%);
 }
