--- a/app/page.module.css
+++ b/app/page.module.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  /* align-items: center;
-  max-width: fit-content; */
+  background-color: black;
+  align-items: center;
   min-height: 100vh;
 }
 
