--- a/app/components/Sections/ReferralsSection/ReferralsSection.module.css
+++ b/app/components/Sections/ReferralsSection/ReferralsSection.module.css
@@ -2,4 +2,30 @@
   height: 100vh;
   background-color: black;
   width: 850px;
+  display: flex;
+  flex-direction: column;
+}
+
+.referral_group {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.referral_single:first-of-type {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+
+.referral_single:second-of-type {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 100%;
+  width: 100%;
 }
