--- a/app/page.module.css
+++ b/app/page.module.css
@@ -23,3 +23,21 @@
   min-height: 100vh;
   background-color: black;
 }
+
+.referral__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  min-height: 100vh;
+  background-color: black;
+}
+
+.signup__container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  min-height: 100vh;
+  background-color: black;
+}
