added font, formatted font code adjusted layout

--- a/app/components/Cards/TextCard/TextCard.module.css
+++ b/app/components/Cards/TextCard/TextCard.module.css
@@ -1,3 +1,10 @@
-.image__container {
+.text__container {
   padding: 1rem;
+}
+
+.text {
+  color: white;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 2rem 2rem;
 }
