--- a/app/page.module.css
+++ b/app/page.module.css
@@ -37,6 +37,17 @@
   max-width: 850px;
 }
 
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translateY(-10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .hidden {
   opacity: 0;
   filter: blur(5px);
@@ -46,4 +57,7 @@
 .show {
   opacity: 1;
   filter: blur(0);
+  animation-name: fadeInDown;
+  animation-duration: 1s;
+  animation-timing-function: ease-in-out;
 }
