--- a/app/components/Sections/IntroSection/IntroSection.module.css
+++ b/app/components/Sections/IntroSection/IntroSection.module.css
@@ -1,16 +1,14 @@
-.logo {
+.nav {
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
 
-.text {
-  color: white;
-  font-size: 24px;
-}
-
-.overlay {
+.button {
   display: grid;
-  place-items: center;
   align-items: center;
+  justify-content: center;
 }
