added in tertiary title, refactoer global styling

--- a/app/components/Cards/Card/Card.module.css
+++ b/app/components/Cards/Card/Card.module.css
@@ -1,7 +1,7 @@
 .card {
   align-items: center;
   border-radius: 0.5rem;
-  color: white;
+  color: var(--white-color);
   display: flex;
   flex-direction: column;
   justify-content: center;
