--- a/app/components/Carousel/Carousel.module.css
+++ b/app/components/Carousel/Carousel.module.css
@@ -8,7 +8,7 @@
 }
 
 .brands {
-  background-color: white;
+  background-color: var(--white-color);
   overflow: hidden;
   padding: 1rem 0;
   white-space: nowrap;
