--- a/app/components/Logo/Logo.module.css
+++ b/app/components/Logo/Logo.module.css
@@ -5,7 +5,7 @@
 }
 
 .logo {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: 700;
-  color: rgb(248, 245, 245);
+  color: var(--white-color);
 }
