--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   height: 5rem;
-  font-family: "__Inter_bcdd59", "__Inter_Fallback_bcdd59";
+  font-family: "Montserrat", sans-serif;
   top: 0;
   width: 100%;
   z-index: 1;
@@ -27,6 +27,6 @@
 }
 
 .link {
-  color: white;
+  color: var(--white-color);
   text-decoration: none;
 }
