WIP sorting out the mob responsive styles

--- a/app/components/Sections/AboutSection/AboutSection.module.css
+++ b/app/components/Sections/AboutSection/AboutSection.module.css
@@ -1,15 +1,20 @@
-.about__title {
-  display: flex;
-  justify-content: center;
+.about_container {
+  border: 1px solid pink;
 }
 
 .about_content {
-  display: flex;
-  flex-direction: row;
-  background-color: black;
-  height: 100vh;
-  align-items: center;
-  width: 850px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 1rem;
+}
+@media (max-width: 40em) {
+  .about_content {
+    grid-template-columns: 1fr;
+  }
+  .about_image {
+    display: flex;
+    justify-content: center;
+  }
 }
 
 .image {
