--- a/app/components/Form/Form.module.css
+++ b/app/components/Form/Form.module.css
@@ -14,7 +14,7 @@
   border: 0;
   clip-path: inset(50%);
   clip: rect(0, 0, 0, 0);
-  height: 1px;
+  min-height: 1px;
   margin: -1px;
   overflow: hidden;
   padding-top: 1rem;
