--- a/app/components/ImageOverlay/ImageOverlay.module.css
+++ b/app/components/ImageOverlay/ImageOverlay.module.css
@@ -1,16 +1,18 @@
 .container {
   position: relative;
-  width: 100%;
-  height: 100vh;
+  min-width: 20em;
+  height: auto;
+  min-height: 100vh;
   overflow: hidden;
+  border: 1px solid green;
 }
 
 .overlay {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  min-width: 20em;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
