--- a/app/components/Navbar/Navbar.module.css
+++ b/app/components/Navbar/Navbar.module.css
@@ -2,11 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 5rem;
+  min-height: 5rem;
   font-family: "Montserrat", sans-serif;
   top: 0;
-  width: 100%;
   z-index: 1;
+}
+
+@media (max-width: 40em) {
+  .nav {
+  }
 }
 
 .logo {
@@ -19,7 +23,6 @@
   display: flex;
   flex-direction: row;
   list-style: none;
-  margin-right: 2rem;
 }
 
 .li {
