--- a/app/components/Sections/IntroSection/IntroSection.module.css
+++ b/app/components/Sections/IntroSection/IntroSection.module.css
@@ -1,9 +1,13 @@
+.intro_container {
+  border: 1px solid purple;
+  width: 20rem;
+}
+
 .nav {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  min-height: 100vh;
   z-index: 1;
 }
 
