--- a/app/components/Sections/ServicesSection/ServicesSection.module.css
+++ b/app/components/Sections/ServicesSection/ServicesSection.module.css
@@ -2,4 +2,11 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 1rem;
+  border: 1px solid lightblue;
+}
+
+@media (max-width: 40em) {
+  .services__container {
+    grid-template-columns: 1fr;
+  }
 }
