working on desktop responsive design

--- a/app/components/Sections/IntroSection/IntroSection.module.css
+++ b/app/components/Sections/IntroSection/IntroSection.module.css
@@ -2,6 +2,13 @@
   width: var(--mob-width);
 }
 
+@media (min-width: 768px) {
+  .intro_container {
+    width: var(--desk-width);
+  }
+}
+
+
 .nav {
   position: absolute;
   top: 0;
