--- a/app/components/ImageOverlay/ImageOverlay.module.css
+++ b/app/components/ImageOverlay/ImageOverlay.module.css
@@ -5,6 +5,8 @@
   overflow: hidden;
 }
 
+
+
 .overlay {
   position: absolute;
   top: 0;
@@ -18,6 +20,13 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
 }
+
+@media (min-width: 768px) {
+  .container, .overlay {
+    width: var(--desk-width);
+  }
+}
+
 
 .intro__image {
   object-fit: "cover";
