--- a/app/components/Sections/SignUpSection/SignUpSection.module.css
+++ b/app/components/Sections/SignUpSection/SignUpSection.module.css
@@ -3,3 +3,13 @@
   flex-direction: column;
   align-items: center;
 }
+
+.signup_container {
+  width: var(--mob-width);
+}
+
+@media (min-width: 768px) {
+  .signup_container {
+    width: var(--desk-width);
+  }
+}
