--- a/app/components/TopNavbar/TopNavbar.module.css
+++ b/app/components/TopNavbar/TopNavbar.module.css
@@ -3,14 +3,9 @@
   justify-content: space-between;
   align-items: center;
   min-height: 5rem;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   top: 0;
   z-index: 1;
-}
-
-@media (max-width: 40em) {
-  .nav {
-  }
 }
 
 .logo {
