added in styling for button

--- a/app/components/Button/Button.module.css
+++ b/app/components/Button/Button.module.css
@@ -1,16 +1,18 @@
 .button {
-  background-color: var(--white-color);
+  background-color: transparent;
   border: 1px solid #eaeaea;
   border-radius: 4px;
-  color: #333;
+  color: #eaeaea;
   cursor: pointer;
   font-size: 1rem;
   font-weight: 400;
+  font-family: inherit;
   line-height: 1.5;
-  padding: 0.1rem 1rem;
+  padding: 0.8rem 1rem;
   z-index: 3;
 }
 
 .button:hover {
   background-color: #eaeaea;
+  color: black;
 }
