refactored styles into globals

--- a/app/components/Cards/Card/Card.module.css
+++ b/app/components/Cards/Card/Card.module.css
@@ -1,6 +1,6 @@
 .card {
   align-items: center;
-  border-radius: 0.5rem;
+  border-radius: var(--border-radius-s);
   color: var(--white-color);
   display: flex;
   flex-direction: column;
