--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,56 @@
 :root {
+  /* colours */
   --white-color: rgb(248, 245, 245);
   --black-color: rgb(0, 0, 0);
+
+  /* Screen sizes */
   --mob-width: 22em;
   --tab-width: 44em;
   --desk-width: 64em;
+
+  /* Font Sizes */
+  --font-size-xxs: 0.6rem;
+  --font-size-xs: 0.8rem;
+  --font-size-s: 1rem;
+  --font-size-m: 1.2rem;
+  --font-size-l: 1.4rem;
+  --font-size-xl: 1.6rem;
+  --font-size-xxl: 1.8rem;
+  --font-size-xxxl: 2rem;
+
+  /* Font Weights */
+  --font-weight-regular: 400;
+  --font-weight-medium: 500;
+  --font-weight-bold: 700;
+
+  /* Line Heights */
+  --line-height-xs: 1.2;
+  --line-height-s: 1.5;
+  --line-height-m: 1.6;
+  --line-height-l: 1.7;
+  --line-height-xl: 1.8;
+  --line-height-xxl: 1.9;
+
+  /* Letter Spacing */
+  --letter-spacing-s: 0.1rem;
+  --letter-spacing-m: 0.2rem;
+  --letter-spacing-l: 0.3rem;
+  --letter-spacing-xl: 0.4rem;
+
+  /* Border Radius */
+  --border-radius-s: 0.4rem;
+  --border-radius-m: 0.8rem;
+  --border-radius-l: 1.2rem;
+  --border-radius-xl: 1.6rem;
+  --border-radius-xxxl: 7rem;
+
+  /* Padding */
+  --padding-xxs: 0.2rem;
+  --padding-xs: 0.4rem;
+  --padding-s: 0.8rem;
+  --padding-m: 1rem;
+  --padding-l: 1.4rem;
+  --padding-xl: 1.6rem;
+  --padding-xxl: 2rem;
+  --padding-xxxl: 5rem;
 }
