--- a/app/components/Button/Button.module.css
+++ b/app/components/Button/Button.module.css
@@ -1,18 +1,18 @@
 .button {
   background-color: transparent;
-  border: 1px solid #eaeaea;
-  border-radius: 4px;
-  color: #eaeaea;
+  border: 1px solid var(--white-color);
+  border-radius: var(--border-radius-s);
+  color: var(--white-color);
   cursor: pointer;
-  font-size: 1rem;
-  font-weight: 400;
+  font-size: var(--font-size-s);
+  font-weight: var(--font-weight-medium);
   font-family: inherit;
-  line-height: 1.5;
-  padding: 0.8rem 1rem;
+  line-height: var(--line-height-s);
+  padding: var(--padding-s) var(--padding-m);
   z-index: 3;
 }
 
 .button:hover {
-  background-color: #eaeaea;
-  color: black;
+  background-color: var(--white-color);
+  color: var(--black-color);
 }
