--- a/app/components/FormField/FormField.module.css
+++ b/app/components/FormField/FormField.module.css
@@ -1,9 +1,9 @@
 .label {
-  font-size: 0.8rem;
-  padding: 1rem 0 0 0.2rem;
+  font-size: var(--font-size-xs);
+  padding: var(--padding-m) 0 0 var(--padding-xxs);
 }
 
 .input {
-  border-radius: 0.3rem;
+  border-radius: var(--border-radius-s);
   width: 100%;
 }
