--- a/app/components/Sections/AboutSection/AboutSection.module.css
+++ b/app/components/Sections/AboutSection/AboutSection.module.css
@@ -1,10 +1,7 @@
-.about_container {
-}
-
 .about_content {
   display: grid;
-    grid-template-rows: repeat(1, 1fr);
-  grid-gap: 1rem;
+  grid-template-rows: repeat(1, 1fr);
+  grid-gap: var(--padding-m);
 }
 
 .about_image {
@@ -14,6 +11,6 @@
 
 .image {
   filter: grayscale(100%);
-  border-radius: 7rem;
-  padding: 2rem 2rem;
+  border-radius: var(--border-radius-xxxl);
+  padding: var(--padding-xxl) var(--padding-xxl);
 }
