--- a/app/components/Sections/ServicesSection/ServicesSection.module.css
+++ b/app/components/Sections/ServicesSection/ServicesSection.module.css
@@ -1,7 +1,7 @@
 .services__container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-gap: 1rem;
+  grid-gap: var(--padding-m);
 }
 
 @media (max-width: 40em) {
