--- a/app/layout.module.css
+++ b/app/layout.module.css
@@ -1,6 +1,6 @@
 .html {
-  background-color: black;
+  background-color: var(--black-color);
 }
 .layout {
-  background-color: black;
+  background-color: var(--black-color);
 }
