adds in testing config and tests for button and start of card components

--- a/app/components/Button/Button.module.css
+++ b/app/components/Button/Button.module.css
@@ -12,7 +12,8 @@
   z-index: 3;
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
   background-color: var(--white-color);
   color: var(--black-color);
 }
