updating content for release of site

--- a/app/components/Sections/AboutSection/AboutSection.module.css
+++ b/app/components/Sections/AboutSection/AboutSection.module.css
@@ -14,3 +14,10 @@
   border-radius: var(--border-radius-xxxl);
   padding: var(--padding-xxl) var(--padding-xxl);
 }
+
+.button_container {
+  display: flex;
+  justify-content: center;
+  margin-top: var(--padding-m);
+  width: 100%;
+}
