--- a/app/components/Sections/ReferralsSection/ReferralsSection.module.css
+++ b/app/components/Sections/ReferralsSection/ReferralsSection.module.css
@@ -39,9 +39,9 @@
   }
 }
 
-.another_random_lady {
+.cass {
   border-radius: var(--border-radius-xxxl);
 }
-.random_lady {
+.jordan {
   border-radius: var(--border-radius-xxxl);
 }
