--- a/app/components/Sections/AboutSection/AboutSection.module.css
+++ b/app/components/Sections/AboutSection/AboutSection.module.css
@@ -1,7 +1,7 @@
 .about_content {
   display: grid;
   grid-template-rows: repeat(1, 1fr);
-  grid-gap: var(--padding-m);
+  grid-gap: var(--padding-s);
 }
 
 .about_image {
